unpackaged/main/default/objects/Error_Log__c/fields/Account_Plant__c.field-meta.xml
<CustomField>
    <fullName>Account_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plant</label>
    <referenceTo>Account_Plant__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>