unpackaged/main/default/objects/Error_Log__c/fields/Plant_Asset_Prompt_Detail__c.field-meta.xml
<CustomField>
    <fullName>Plant_Asset_Prompt_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Asset Prompt Detail</label>
    <referenceTo>Plant_Asset_Prompt_Detail__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>