unpackaged/main/default/objects/Error_Log__c/fields/Plant_Asset_Prompt_Detail_Id__c.field-meta.xml
<CustomField>
    <fullName>Plant_Asset_Prompt_Detail_Id__c</fullName>
    <label>Plant Asset Prompt Detail Id</label>
    <type>TextArea</type>
</CustomField>